--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
     <meta name="author" content=""> 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	  <script src="/assets/bootstrap-editable.min.js"></script>
-	
+    <%= javascript_include_tag 'application' %>
+
     <link href="/assets/bootstrap.css" rel="stylesheet">
     <link href="/assets/jess.css" rel="stylesheet">
     <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
