--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="/assets/MST_Favicon.png" type="image/png">
     <link rel="icon" href="/assets/MST_Favicon.png" type="image/png">
+
+  <%= csrf_meta_tag %>
+    
   </head>
 
   <body>
