--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#"><img src="/assets/Logo_Icon_Small.png" height="34" width="180" /></a>
+          <a class="brand" href="/"><img src="/assets/Logo_Icon_Small.png" height="34" width="180" /></a>
 		
           <div class="nav-collapse collapse">
             <ul class="nav">
