follow/unfollow on detail

--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -5,30 +5,30 @@
     <% [:image_0, :image_1, :image_2].each do |image_sym|
       if (img = sale.send(image_sym)) and not img.versions[:web_thumbnail].to_s.empty? 
         img_version = (detail ? :feed_large_2x : :web_modal)
-    %>
-    <img class="img-polaroid" src="<%= img.versions[:web_thumbnail] %>" height="100px" width="100px" onmouseover="$('#sale_image_<%= sale.id %>')[0].src='<%= img.versions[img_version] %>'" onclick="$('#sale_image_<%= sale.id %>')[0].src='<%= img.versions[img_version] %>'" />
-    <%   end
+      %>
+      <img class="img-polaroid" src="<%= img.versions[:web_thumbnail] %>" height="100px" width="100px" onmouseover="$('#sale_image_<%= sale.id %>')[0].src='<%= img.versions[img_version] %>'" onclick="$('#sale_image_<%= sale.id %>')[0].src='<%= img.versions[img_version] %>'" />
+      <%   end
     end %>
   <br>
   </div> <!-- thumbnails -->
   <div class="span6">
     <% if !detail %>  
-    <span class="time-banner">
+      <span class="time-banner">
     <% end %>
       <span class="image-banner">
 
         <% if detail %>
-        <img id="sale_image_<%= sale.id %>" src="<%= sale.image_0.versions[:feed_large_2x] if sale.image_0 %>" alt="" />
+          <img id="sale_image_<%= sale.id %>" src="<%= sale.image_0.versions[:feed_large_2x] if sale.image_0 %>" alt="" />
       <% else %>
-        <a href="<%= sale_url(sale.id) %>">
+          <a href="<%= sale_url(sale.id) %>">
           <img id="sale_image_<%= sale.id %>" src="<%= sale.image_0.versions[:web_modal] if sale.image_0 %>" alt="" />
         </a>
-        <% end %>
+      <% end %>
 
         <span class="banner-toggle">
 
           <% if !detail %>
-          <span class="percentoff">
+            <span class="percentoff">
           <% end %>
 
             <center>
@@ -38,14 +38,14 @@
               </font>
             </center>
 
-          <% if !detail %>
-          </span>
-          <% end %>
+            <% if !detail %>
+            </span>
+        <% end %>
 
         </span>
       </span>
-    <% if !detail %>
-    </span>
+      <% if !detail %>
+      </span>
   <% end %>
     <br>
     <table class="table table-bordered">  
@@ -62,7 +62,7 @@
 
     </table>
     <% unless detail %>
-    <span class="modal-social">
+      <span class="modal-social">
       <i class="icon-heart"> </i>&#160;&#160;
       <a href="<%= sale_url(sale.id) %>">
         <i class="icon-comment">&#160;</i>&#160;
@@ -70,22 +70,55 @@
       <img src="/assets/f_logo.png" height="16px" width="16px">&#160;&#160;
       <img src="/assets/T_logo.png" height="16px" width="16px">
     </span>
-    <% end %>
+  <% end %>
   </div>
 
   <div class="span4 pull-right">
     <% if detail %>
-    <a href="purchase.html" class="btn btn-success btn-large span4 pull-right">Buy</a>
-    <% end %>
+      <a href="purchase.html" class="btn btn-success btn-large span4 pull-right">Buy</a>
+  <% end %>
 
     <a href="<%= user_custom_slug_url(sale.user) %>">
-      
+
       <img class="img-polaroid" src="<%= sale.user.photo.versions[:feed_2x] %>" height="60" width="60px">
     </a>
     <br>
     <a href="<%= user_custom_slug_url(sale.user) %>"><b><%= sale.user.display_name %></b></a>
     <br>
     <p class="muted time"><%= sale.user.city.name %></p>
+
+    <% if detail %>
+
+      <script>
+
+jQuery(function($) {
+  $("a#follow").bind("ajax:success", function(event, data, status, xhr) {
+    follow_link = $('a#follow')[0];
+    follow_link.style.display = "none";
+
+    unfollow_link = $('a#unfollow')[0];
+    unfollow_link.style.display = "";
+    unfollow_link.href = "/followers/" + data['id'];
+  });
+
+  $("a#unfollow").bind("ajax:success", function(event, data, status, xhr) {
+    follow_link = $('a#follow')[0];
+    follow_link.style.display = "";
+
+    unfollow_link = $('a#unfollow')[0];
+    unfollow_link.style.display = "none";
+  });
+});
+
+    </script>
+
+    <% sale.user.other_user = @user %>
+
+    <%= link_to("Unfollow", follower_path(:id => (sale.user.is_followed || "blah")), :remote => true, :method => :delete, :class => "btn pull-right span12", :id=> "unfollow", :style => ("display:none;" unless sale.user.is_followed)) %>
+
+    <%= link_to("Follow", followers_path(:following_id => sale.user.id), :remote => true, :method => :post, :class => "btn pull-right span12", :id=> "follow", :style => ("display:none;" if sale.user.is_followed)) %>
+
+  <% end %>
 
     <br><br><br>
     <table class="table table-bordered table-striped">
@@ -113,30 +146,30 @@
       <h3>Comments</h3>
       <% sale.comments.each do |comment| %>
         <img src="<%= comment.user.photo.versions[:feed] %>" >&#160;<%= comment.text %><br><br>
-      <% end %>
+    <% end %>
 
       <script>
-        function submitComment(e) {
-          e = e || event;
-          if (e.keyCode === 13) {
-            $('#comment_form').submit();
-            return false;
-          }
-           return true;
-        }
+function submitComment(e) {
+  e = e || event;
+  if (e.keyCode === 13) {
+    $('#comment_form').submit();
+    return false;
+  }
+  return true;
+}
       </script>
-      
+
       <%= form_tag({:controller => "comments", 
                     :action => "create",
                     :sale_id => sale.id}, 
                     :id => "comment_form") do |f| %>
-        <img src="<%= @user.photo.versions[:feed] %>">&#160;
-        <textarea id="new_comment" name="text" data-provide="limit" data-counter="#counter"  class="comment-box" placeholder="Enter your comment here"rows="2" onkeydown="return submitComment(event);"></textarea>
-      <% end %>
-    </span>
+                    <img src="<%= @user.photo.versions[:feed] %>">&#160;
+                    <textarea id="new_comment" name="text" data-provide="limit" data-counter="#counter"  class="comment-box" placeholder="Enter your comment here"rows="2" onkeydown="return submitComment(event);"></textarea>
+                  <% end %>
+                  </span>
 
-    <% end %>
+                <% end %>
 
 
-  </div>
-</div>
+                </div>
+              </div>
